# mlx-llama3.1

./: README.md  pyproject.toml
src/hugging_face_nlp/: __init__.py
src/mlx_llama3_1/: caching_model.py  llama3_1.py  llm_metrics.py  rich.py  utils.py  visualizer.py
src/mlx_llama3_1/examples/: llama3_1_generate_prompt.py  llama3_1_text_generation.py  llama3_1_text_generation_simulation.py  llama3_1_text_generation_visualization.py
