[project]
name = "mlx-llama3.1"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kawamou", email = "kwmkzsd@gmail.com" }
]
dependencies = [
    "mlx-lm>=0.16.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hugging_face_nlp"]
